[gd_scene load_steps=21 format=2]

[ext_resource path="res://Load.gd" type="Script" id=1]
[ext_resource path="res://Crane.gd" type="Script" id=2]
[ext_resource path="res://CraneHook.glb" type="PackedScene" id=3]
[ext_resource path="res://Materials/Red.tres" type="Material" id=4]
[ext_resource path="res://Materials/Green.tres" type="Material" id=5]
[ext_resource path="res://Material_001.material" type="Material" id=6]

[sub_resource type="CylinderShape" id=1]
radius = 0.581062

[sub_resource type="CylinderMesh" id=2]

[sub_resource type="CylinderShape" id=3]
height = 1.18519
radius = 0.531128

[sub_resource type="CylinderMesh" id=4]

[sub_resource type="BoxShape" id=5]
extents = Vector3( 2.48691, 0.209947, 0.284895 )

[sub_resource type="CubeMesh" id=6]

[sub_resource type="SphereShape" id=7]
radius = 0.185642

[sub_resource type="SphereMesh" id=8]

[sub_resource type="BoxShape" id=15]
extents = Vector3( 1, 1.109, 1 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 0.893784, 1.42873, 1.65427 )

[sub_resource type="CubeMesh" id=11]

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.639673, 1.59932, 1.55427 )

[sub_resource type="BoxShape" id=13]
extents = Vector3( 13.2321, 0.130377, 5.70726 )

[sub_resource type="CubeMesh" id=14]

[node name="Crane" type="Spatial"]
script = ExtResource( 2 )
slewSpeed = 6.0
luffSpeed = 4.0
hoistSpeed = 0.5
cableStiffness = 4.0

[node name="CraneColumn" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="CraneColumn"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CraneColumn"]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 6 )

[node name="CraneHouse" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.63563, 0 )

[node name="CollisionShape" type="CollisionShape" parent="CraneHouse"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="CraneHouse/CollisionShape"]
transform = Transform( 0.5, 0, 0, 0, 0.631158, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 6 )

[node name="Boom" type="KinematicBody" parent="CraneHouse"]
transform = Transform( 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0, 1, -0.748868, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="CraneHouse/Boom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.37141, 0, 0 )
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="CraneHouse/Boom/CollisionShape"]
transform = Transform( 2.47764, 0, 0, 0, 0.203089, 0, 0, 0, 0.288118, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = ExtResource( 6 )

[node name="BoomTip" type="Spatial" parent="CraneHouse/Boom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.77132, 0, 0 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0210853, 2.16328, 7.84933 )

[node name="Hook" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.96738, 0.878151, 0 )
mass = 100.0
contact_monitor = true
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="Hook"]
shape = SubResource( 7 )

[node name="CraneHook" parent="Hook/CollisionShape" instance=ExtResource( 3 )]

[node name="CargoEmpty" type="RigidBody" parent="Hook"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.460543, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Hook/CargoEmpty"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )

[node name="Load" type="Spatial" parent="."]
transform = Transform( 0.20486, 0, 0, 0, 0.0962749, 0, 0, 0, 0.249055, -5.03048, 0, 0 )
script = ExtResource( 1 )

[node name="AttachPoint" type="RigidBody" parent="Load"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 1.25079, 0 )
mass = 200.0

[node name="MeshInstance" type="MeshInstance" parent="Load/AttachPoint"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = SubResource( 8 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Load/AttachPoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.85505, 0 )
shape = SubResource( 15 )

[node name="Load" type="RigidBody" parent="Load/AttachPoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.831141, 0.00439835, -1.8359, 0 )
mass = 1000.0

[node name="CollisionShape" type="CollisionShape" parent="Load/AttachPoint/Load"]
transform = Transform( 0.772313, 0, 0, 0, 0.772313, 0, 0, 0, 0.772313, 0, 0, 0 )
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="Load/AttachPoint/Load/CollisionShape"]
transform = Transform( 1.1034, 0, 0, 0, 1.41583, -0.0125323, 0, 0.0023101, 1.6615, 0, 0.0577111, 0 )
mesh = SubResource( 11 )
material/0 = ExtResource( 5 )

[node name="Area" type="Area" parent="Load/AttachPoint/Load"]
transform = Transform( 1.81344, 0, 0, 0, 0.625189, 0, 0, 0, 1.08438, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Load/AttachPoint/Load/Area"]
transform = Transform( 3.05822, 0, 0, 0, 1.26231, 0, 0, 0, 2.1666, 0, 0.309131, 0 )
shape = SubResource( 12 )

[node name="Floor" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.14135, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="Floor/CollisionShape"]
transform = Transform( 13.3998, 0, 0, 0, 0.120154, 0, 0, 0, 5.85714, 0, 0, 0 )
mesh = SubResource( 14 )

[node name="AttachJoint" type="PinJoint" parent="."]
transform = Transform( 0.20486, 0, 0, 0, 0.0962748, 0, 0, 0, 0.249054, -4.97163, 0.716106, -0.0198958 )
nodes/node_a = NodePath("../Load/AttachPoint")
nodes/node_b = NodePath("../Hook")

[connection signal="body_entered" from="Load/AttachPoint/Load/Area" to="Load" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Load/AttachPoint/Load/Area" to="Load" method="_on_Area_body_exited"]
